test/compile-fail/resolution/use/crate-name/expected.txt
error: unresolved item `a`
 --> top.rhdl:1:11
  |
1 | use crate::a;
  |            ^ no `a` in `crate`
